syntax = "proto3";

option csharp_namespace = "PingPongDemo";

package chatmessage;

service Messager {
  // sends the message
  rpc SendMessage (MessageRequest) returns (MessageConfirmation);
  // alerts ChatService of new Player
  rpc AddPlayer (PlayerJoinRequest) returns (MessageConfirmation); 
  // alerts ChatService of Player leaving
  rpc RemovePlayer (PlayerLeaveRequest) returns (MessageConfirmation);
}

// The uuid of the player along with the message
message MessageRequest {
  string uuid = 1;
  string message = 2;
}

// The response message containing the greetings.
message MessageConfirmation {
  string status = 1;
}

// The request message for a player joining the chat
message PlayerJoinRequest {
  string uuid = 1;
  string playerName = 2;
}

message PlayerLeaveRequest {
  string uuid = 1;
  string playerName = 2;
}